fixed big movie name overflow

--- a/client/src/elements/MovieCard/MovieCard.css
+++ b/client/src/elements/MovieCard/MovieCard.css
@@ -61,6 +61,12 @@
   text-transform: uppercase;
   font-family: "Coda", cursive;
   font-weight: bold;
+
+  display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .movieOverview {
